# isabl-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  context7.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
dev/example-apps/nextflow-single-cell-alignment/: README.md  nextflow_single_cell_alignment_app.py
knowledge/data/: documents.json
knowledge/output/: TREE.md  tree.html  tree.json
knowledge/output/site/: README.md
knowledge/output/site/data-management-import/: README.md
knowledge/src/isabl_knowledge/: cli.py  llm.py  summarizer.py  tree_builder.py
knowledge/src/isabl_knowledge/extractors/: base.py  django_api.py  openapi.py  registry.py
knowledge/src/isabl_knowledge/renderers/: html_tree.py  mermaid.py
knowledge/tests/: test_cli.py  test_summarizer.py
mcp-server/: README.md  pyproject.toml
mcp-server/isabl_mcp/: __init__.py  config.py  prompts.py  server.py
mcp-server/isabl_mcp/clients/: isabl_api.py
mcp-server/isabl_mcp/tools/: data.py  knowledge.py
mcp-server/tests/: test_api_client.py  test_config.py  test_data_tools.py  test_error_handling.py  test_integration.py  test_knowledge_tools.py  test_prompts.py
scripts/: install.sh
skills/: README.md  isabl-query-data.md
skills/debug-analysis/: SKILL.md
skills/isabl-run-pipeline/: SKILL.md
skills/isabl-write-app/: SKILL.md
skills/merge-results/: SKILL.md
skills/monitor-analyses/: SKILL.md
skills/project-report/: SKILL.md
skills/query-data/: SKILL.md
skills/run-pipeline/: SKILL.md
skills/submit-data/: SKILL.md
skills/write-app/: SKILL.md
